<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.rapidpm.demo.soap</groupId>
    <artifactId>20150205-mtom-example</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <nexus.ip>nexus.rapidpm.org</nexus.ip>
    </properties>
    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.1</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                    <showDeprecation>true</showDeprecation>
                    <showWarnings>true</showWarnings>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>2.4</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>jar</goal>
                            <goal>test-jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>2.2.1</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>jar</goal>
                            <goal>test-jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.16</version>
                <!--<dependencies>-->
                <!--<dependency>-->
                <!--<groupId>org.apache.maven.surefire</groupId>-->
                <!--<artifactId>surefire-junit47</artifactId>-->
                <!--<version>2.16</version>-->
                <!--</dependency>-->
                <!--</dependencies>-->
                <configuration>
                    <!--<skipTests>true</skipTests>-->
                    <!--<forkCount>2.5C</forkCount>-->
                    <!--<forkCount>1</forkCount>-->
                    <!--<parallel>methods</parallel>-->
                    <!--<threadCount>10</threadCount>-->
                    <!--<reuseForks>false</reuseForks>-->
                    <!--<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>-->
                    <!--<argLine>-Xmx1024m</argLine>-->
                    <!--<forkMode>always</forkMode>-->
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-repository-plugin</artifactId>
                <version>2.3.1</version>
            </plugin>
        </plugins>
    </build>

    <!--for development of features/develop branch-->
    <distributionManagement>
        <repository>
            <id>releases</id>
            <name>RapidPM Releases</name>
            <url>http://${nexus.ip}/nexus/content/repositories/releases</url>
        </repository>
        <snapshotRepository>
            <id>snapshots</id>
            <name>RapidPM Snapshots</name>
            <url>http://${nexus.ip}/nexus/content/repositories/snapshots</url>
        </snapshotRepository>
    </distributionManagement>
    <profiles>
        <profile>
            <id>junit</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <configuration>
                            <includes>
                                <include>**/junit/**</include>
                            </includes>
                            <excludes>
                                <exclude>**/perf/**</exclude>
                            </excludes>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>performance</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <configuration>
                            <includes>
                                <include>**/perf/**</include>
                            </includes>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    <inceptionYear>2015</inceptionYear>
    <organization>
        <name>RapidPM</name>
        <url>http://www.rapidpm.org</url>
    </organization>
    <scm>
        <url>http://git.rapidpm.org:9988/codecentric-macrosreply/20150205-mtom-example</url>
        <connection>scm:git:http://git.rapidpm.org:9988/codecentric-macrosreply/20150205-mtom-example.git</connection>
        <developerConnection>scm:git:http://git.rapidpm.org:9988/codecentric-macrosreply/20150205-mtom-example.git
        </developerConnection>
    </scm>
    <developers>
        <developer>
            <name>Sven Ruppert</name>
            <email>sven.ruppert@gmail.com</email>
            <roles>
                <role>Developer</role>
            </roles>
        </developer>
    </developers>
    <issueManagement>
        <system>GitLab</system>
        <url>http://git.rapidpm.org:9988/codecentric-macrosreply/20150205-mtom-example/issues</url>
    </issueManagement>
    <!--<ciManagement>-->
        <!--<system>Jenkins</system>-->
        <!--<url>http://jenkins.rapidpm.org/job/rapidpm-modules/</url>-->
        <!--<notifiers>-->
            <!--<notifier></notifier>-->
        <!--</notifiers>-->
    <!--</ciManagement>-->
    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
            <comments>A business-friendly OSS license</comments>
        </license>
    </licenses>

</project>